wasmcloud-and-linkerd/curl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
spec:
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
      - name: curl
        image: curlimages/curl
        command: [/bin/sleep, 3650d]
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
